eslint: Turn off no-console

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,7 +33,7 @@
     "rules": {
       "no-unused-vars": "off",
       "@typescript-eslint/no-unused-vars": "warn",
-      "no-console": "warn",
+      "no-console": "off",
       "react/react-in-jsx-scope": "off"
     }
   }
